--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,6 +59,6 @@ jobs:
       - name: Delete old images
         uses: actions/delete-package-versions@v5
         with:
-          package-name: ${{ env.PACKAGE_NAME }}
+          package-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           package-type: container
           min-versions-to-keep: 20
