--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,3 +62,4 @@ jobs:
           package-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           package-type: container
           min-versions-to-keep: 20
+          delete-only-untagged-versions: true
